# UA-MPC

./: README.md
I2EKF-LO/config/: marsim.yaml
I2EKF-LO/include/: common_lib.h
I2EKF-LO/launch/: marsim.launch
I2EKF-LO/rviz_cfg/: fast_lo.rviz
I2EKF-LO/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
RotorOptimalControl/: README.md
RotorOptimalControl/marsim/local_sensing/: CMakeLists.txt
RotorOptimalControl/marsim/mars_drone_sim/: CMakeLists.txt
RotorOptimalControl/marsim/odometry_generator/: CMakeLists.txt  package.xml
RotorOptimalControl/marsim/odometry_generator/include/: vehicle_odom_player.hpp
RotorOptimalControl/marsim/odometry_generator/resource/: kth_day06.csv  tuhh_day03.csv
RotorOptimalControl/marsim/odometry_generator/src/: odometry_generator.cpp
RotorOptimalControl/optimalcontroller/: CMakeLists.txt  package.xml
RotorOptimalControl/optimalcontroller/config/: simulation.yaml
RotorOptimalControl/optimalcontroller/include/: factors.hpp  lidarprojection.hpp  pointrendering.hpp
RotorOptimalControl/optimalcontroller/launch/: simulation_constspeed_NTU.launch  simulation_optimalspeed_KTH.launch  simulation_optimalspeed_NTU.launch  simulation_optimalspeed_TUHH.launch
RotorOptimalControl/optimalcontroller/src/: constantSpeedControl.cpp
RotorOptimalControl/system_evaluation/: CMakeLists.txt  package.xml
RotorOptimalControl/system_evaluation/launch/: evaluate_constantspeed_KTH.launch  evaluate_constantspeed_NTU.launch  evaluate_constantspeed_TUHH.launch  evaluate_optimalcontrol_KTH.launch  evaluate_optimalcontrol_NTU.launch  (+1 more)
(+25 files in other folders)
